--- a/api/qsharp/microsoft.quantum.convert.intasstringwithformat.yml
+++ b/api/qsharp/microsoft.quantum.convert.intasstringwithformat.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.convert.intasstringwithformat
 name: IntAsStringWithFormat
 type: function
-namespace: Microsoft.Quantum.Convert
+namespace: microsoft.quantum.convert
 summary: 使用给定的格式将给定整数转换为等效的字符串表示形式。
 remarks: '有关更多详细信息，请参阅[c # Int64。](https://docs.microsoft.com/dotnet/api/system.int64.tostring?view=netframework-4.7.1#System_Int64_ToString_System_String_)'
 syntax: 'function IntAsStringWithFormat (a : Int, fmt : String) : String'
@@ -21,9 +21,9 @@ output:
   - isPrimitive: true
     uid: String
 metadata:
-  ms.openlocfilehash: 138eea4609ff77dfe9b64f75d2a767ddccc3786b
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: d73472502e2d4a05f67463e246e7b0f5c39870f2
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82677430"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89338345"
