--- a/api/qsharp/microsoft.quantum.intrinsic.exp.yml
+++ b/api/qsharp/microsoft.quantum.intrinsic.exp.yml
@@ -2,12 +2,12 @@
 uid: microsoft.quantum.intrinsic.exp
 name: Exp
 type: operation
-namespace: Microsoft.Quantum.Intrinsic
+namespace: microsoft.quantum.intrinsic
 summary: >-
   应用多 qubit Pauli 运算符的幂。
 
 
-  \begin{align} e ^ {i \theta [P_0 \otimes P_1 \cdots P_ {N-1}]}，\end{align}，其中 $P _i $ 是的 $i $ th 元素`paulis`，其中 $N = $`Length(paulis)`。
+  \begin{align} e ^ {i \theta [P_0 \otimes P_1 \cdots P_ {N-1}]}，\end{align}，其中 $P _i $ 是的 $i $ th 元素 `paulis` ，其中 $N = $ `Length(paulis)` 。
 syntax: 'operation Exp (paulis : Pauli[], theta : Double, qubits : Qubit[]) : Unit'
 input:
   content: '(paulis : Pauli[], theta : Double, qubits : Qubit[])'
@@ -35,9 +35,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: d66b1b03a751be2629d2c363f538d9afa0310c73
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: e1af5b4e19a09961e6296d61abc6f6d81f36000d
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82683824"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89347066"
