--- a/api/qsharp/microsoft.quantum.math.negationc.yml
+++ b/api/qsharp/microsoft.quantum.math.negationc.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.math.negationc
 name: NegationC
 type: function
-namespace: Microsoft.Quantum.Math
+namespace: microsoft.quantum.math
 summary: 返回输入的一元求反。
 syntax: 'function NegationC (input : Microsoft.Quantum.Math.Complex) : Microsoft.Quantum.Math.Complex'
 input:
@@ -14,12 +14,12 @@ input:
 output:
   content: Microsoft.Quantum.Math.Complex
   types:
-  - summary: 的一元求反`input`。
+  - summary: 的一元求反 `input` 。
     uid: microsoft.quantum.math.complex
 metadata:
-  ms.openlocfilehash: 4a8fff92778578483db7c8bfa579c66549da5670
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 46d5f178e0340aca3f47f01b7905c151ab0220fb
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82686606"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89333993"
