--- a/api/qsharp/microsoft.quantum.convert.rangeasintarray.yml
+++ b/api/qsharp/microsoft.quantum.convert.rangeasintarray.yml
@@ -2,8 +2,8 @@
 uid: microsoft.quantum.convert.rangeasintarray
 name: RangeAsIntArray
 type: function
-namespace: Microsoft.Quantum.Convert
-summary: 创建一个由`arr` start. 枚举的整数数组。步骤 .。。端面.
+namespace: microsoft.quantum.convert
+summary: 创建一个 `arr` 由 start. 枚举的整数数组。步骤 .。。端面.
 examples: >-
   ```qsharp
 
@@ -17,20 +17,20 @@ input:
   content: '(range : Range)'
   types:
   - name: range
-    summary: 要`Range`转换为`start..step..end`数组的值的。
+    summary: '`Range` `start..step..end` 要转换为数组的值的。'
     isPrimitive: true
     uid: Range
 output:
   content: Int[]
   types:
-  - summary: 一个新的整数数组，对应于通过循环访问`range`的值。
+  - summary: 一个新的整数数组，对应于通过循环访问的值 `range` 。
     isArray: true
     isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: f909319a624459b2453db2ac73d3ceaec38f6911
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 22077ab84984e3701fef26c28fefefd325ea4627
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82677375"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89338311"
