--- a/api/qsharp/microsoft.quantum.extensions.testing.assertallzero.yml
+++ b/api/qsharp/microsoft.quantum.extensions.testing.assertallzero.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.extensions.testing.assertallzero
 name: AssertAllZero
 type: operation
-namespace: Microsoft.Quantum.Extensions.Testing
+namespace: microsoft.quantum.extensions.testing
 summary: AssertAllZero 已被弃用。 请改用 @"microsoft.quantum.diagnostics.assertallzero"。
 syntax: 'operation AssertAllZero (qubits : Qubit[]) : Unit'
 input:
@@ -21,9 +21,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: b14b925e7d07d1f0f208ad91a4054a7b813fdaa5
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: b76396f1839a0b44f5fbd985afdac66d8e0dda1f
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82681817"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89347542"
