--- a/api/qsharp/microsoft.quantum.extensions.testing.assertqubittol.yml
+++ b/api/qsharp/microsoft.quantum.extensions.testing.assertqubittol.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.extensions.testing.assertqubittol
 name: AssertQubitTol
 type: operation
-namespace: Microsoft.Quantum.Extensions.Testing
+namespace: microsoft.quantum.extensions.testing
 summary: AssertQubitTol 已被弃用。 请改用 @"microsoft.quantum.diagnostics.assertqubitwithintolerance"。
 syntax: 'operation AssertQubitTol (expected : Result, q : Qubit, tolerance : Double) : Unit'
 input:
@@ -23,9 +23,9 @@ output:
   - isPrimitive: true
     uid: Unit
 metadata:
-  ms.openlocfilehash: e58a8fefa8bb3a073452183531e495a5724b759d
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 8c5971846779016a22990cd00cdb5a087f32c088
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82674191"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89347185"
