--- a/api/qsharp/microsoft.quantum.intrinsic.m.yml
+++ b/api/qsharp/microsoft.quantum.intrinsic.m.yml
@@ -2,12 +2,12 @@
 uid: microsoft.quantum.intrinsic.m
 name: M
 type: operation
-namespace: Microsoft.Quantum.Intrinsic
+namespace: microsoft.quantum.intrinsic
 summary: >-
   对 Pauli $Z $ basis 中的单个 qubit 进行度量。
 
 
-  此输出结果由分发 \begin{align} \Pr （\texttt{Zero} | \ket{\psi}） = \braket{\psi | 0} \braket{0 | \psi}. 提供
+  输出结果由分发 \begin{align} \Pr ( \texttt{Zero} 提供\ket{\psi} ) = \braket{\psi | 0} \braket{0 | \psi}。
 
   \end{align}
 remarks: >-
@@ -30,13 +30,13 @@ input:
 output:
   content: Result
   types:
-  - summary: '`Zero`如果观察到 $ + $1 eigenvalue，并`One`观察到 $-$1 eigenvalue，则为。'
+  - summary: '`Zero` 如果观察到 $ + $1 eigenvalue，并 `One` 观察到 $-$1 eigenvalue，则为。'
     isPrimitive: true
     uid: Result
 metadata:
-  ms.openlocfilehash: e13f82aa3489fcd1d0c5121f436ae1f600675957
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: ad1e5bf7258451ec922416663e72e4386d16c23d
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82683748"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89346964"
