--- a/api/qsharp/microsoft.quantum.math.minusd.yml
+++ b/api/qsharp/microsoft.quantum.math.minusd.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.math.minusd
 name: MinusD
 type: function
-namespace: Microsoft.Quantum.Math
+namespace: microsoft.quantum.math
 summary: 返回两个输入之间的差。
 syntax: 'function MinusD (a : Double, b : Double) : Double'
 input:
@@ -23,9 +23,9 @@ output:
     isPrimitive: true
     uid: Double
 metadata:
-  ms.openlocfilehash: 5b12a7d44fb3709a65732fca63f26e86586ee033
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 44bd530c8186a3330c7f07e48e7761ce5645983a
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82686742"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89334197"
