--- a/api/qsharp/microsoft.quantum.math.negationcp.yml
+++ b/api/qsharp/microsoft.quantum.math.negationcp.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.math.negationcp
 name: NegationCP
 type: function
-namespace: Microsoft.Quantum.Math
+namespace: microsoft.quantum.math
 summary: 返回输入的一元求反。
 syntax: 'function NegationCP (input : Microsoft.Quantum.Math.ComplexPolar) : Microsoft.Quantum.Math.ComplexPolar'
 input:
@@ -14,12 +14,12 @@ input:
 output:
   content: Microsoft.Quantum.Math.ComplexPolar
   types:
-  - summary: 的一元求反`input`。
+  - summary: 的一元求反 `input` 。
     uid: microsoft.quantum.math.complexpolar
 metadata:
-  ms.openlocfilehash: d67ba08e2f370c2f51d66d4ba86889c36eca95d9
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 4ed7202440b10c033a796a7a3ebffcfe471b15e7
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82686591"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89333891"
