--- a/api/qsharp/microsoft.quantum.math.negationd.yml
+++ b/api/qsharp/microsoft.quantum.math.negationd.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.math.negationd
 name: NegationD
 type: function
-namespace: Microsoft.Quantum.Math
+namespace: microsoft.quantum.math
 summary: 返回输入的一元求反。
 syntax: 'function NegationD (input : Double) : Double'
 input:
@@ -15,13 +15,13 @@ input:
 output:
   content: Double
   types:
-  - summary: 的一元求反`input`。
+  - summary: 的一元求反 `input` 。
     isPrimitive: true
     uid: Double
 metadata:
-  ms.openlocfilehash: b33d8c03e7ee4012220a616b3fd14e23ff1a85f4
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 47d80909df9041a524fbffd9a0a519567c757414
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82686568"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89333874"
