--- a/api/qsharp/microsoft.quantum.math.pi.yml
+++ b/api/qsharp/microsoft.quantum.math.pi.yml
@@ -2,9 +2,9 @@
 uid: microsoft.quantum.math.pi
 name: PI
 type: function
-namespace: Microsoft.Quantum.Math
+namespace: microsoft.quantum.math
 summary: 表示圆的周长与其直径的比值，由常数 π 指定。
-remarks: 有关更多详细信息，请参阅[system.object](https://docs.microsoft.com/dotnet/api/system.math.pi) 。
+remarks: 有关更多详细信息，请参阅 [system.object](https://docs.microsoft.com/dotnet/api/system.math.pi) 。
 syntax: 'function PI () : Double'
 input:
   content: ()
@@ -15,9 +15,9 @@ output:
   - isPrimitive: true
     uid: Double
 metadata:
-  ms.openlocfilehash: 692fd1dc9f4801098ab2e2c97362af9fa24603ec
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 249f21d8b8e3d62dc68fa36b03c88b23eab8f3d7
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82684169"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89333806"
